--- a/openbor/openbor-7735.html
+++ b/openbor/openbor-7735.html
@@ -42,7 +42,7 @@
   <div class="contentCard">
     <h2 class="h1">OpenBOR – AltDünya Pack v1.0</h2>
     <div class="embed">
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Kurulum Rehberi" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/r8DMx9-Jxe8?si=rx-PlPhf_jYjW6As" title="Kurulum Rehberi" allowfullscreen></iframe>
     </div>
 
     <div class="metaRow">
