--- a/originals/index.html
+++ b/originals/index.html
@@ -3,81 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AltDünya Originals – AltDünya</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
-  
+  <title>AltDünya Originals</title>
 </head>
-<body data-category="originals">
-  <div class="stars"></div>
+<body style="background:#070812;color:#e9ecff;font-family:system-ui;margin:0;padding:40px">
+  <h1>AltDünya Originals</h1>
+  <p>Özgün formatlarımız ve yayın araçlarımız.</p>
 
-  <header>
-    <div class="topbar">
-      <a class="brand" href="../index.html" aria-label="AltDünya ana sayfa">
-        <div class="ufo" aria-hidden="true"></div>
-        <div>
-          <h1>ALTDÜNYA – Retro Hub</h1>
-          <small>Neon Retro Uzay • Arşiv • Kurulum Rehberleri</small>
-        </div>
-      </a>
-      <nav aria-label="Site menüsü">
-        <a class="navlink" href="../index.html">Ana Sayfa</a>
-        <a class="navlink" href="../free/index.html">Freeware / Abandonware</a>
-        <a class="navlink" href="../openbor/index.html">OpenBOR</a>
-        <a class="navlink" href="../originals/index.html">Originals</a>
-        <a class="navlink" href="https://www.youtube.com/@altdunya" target="_blank" rel="noopener">YouTube</a>
-      </nav>
-    </div>
-  </header>
+  <hr style="margin:30px 0">
 
-  <main class="wrap">
-    
-<section class="hero" aria-label="AltDünya Originals">
-  <div class="heroCard">
-    <div class="heroInner">
-      <div>
-        <div class="breadcrumb">
-          <a href="../index.html">Anasayfa</a> <span>›</span> <span>AltDünya Originals</span>
-        </div>
-        <h2 class="heroTitle">AltDünya Originals</h2>
-        <p class="heroSub">Kanal için üretilen alternatif içerikler: <strong>Developer Tools</strong> ve <strong>AltDünya Inventory</strong>.</p>
-        <div class="pillRow">
-          <span class="pill cyan">🛠 Developer Tools</span>
-          <span class="pill purple">🎒 Inventory</span>
-          <span class="pill pink">🔎 Arama & Etiket</span>
-        </div>
-      </div>
-
-      <div class="panel">
-        <p class="searchLabel">Originals İçinde Arama</p>
-        <div class="searchRow">
-          <input id="catq" class="search" type="search" placeholder="Tool, logo, wallpaper, overlay..." autocomplete="off" />
-        </div>
-        <p class="helper">Filtre: <strong>isim + kısa özet + etiketler</strong>.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <h2>AltDünya Originals</h2>
-  <div id="catgrid" class="grid3"></div>
-</section>
-
-  </main>
-
-  <footer>
-    <div class="foot">
-      <div style="display:flex; gap:10px; flex-wrap:wrap;">
-        <a href="../legal.html">Telif Politikası</a>
-        <a href="../contact.html">İletişim</a>
-        <a href="https://www.youtube.com/@altdunya" target="_blank" rel="noopener">YouTube</a>
-        <a href="../originals/index.html">Originals</a>
-      </div>
-      <small>© AltDünya • Retro Hub</small>
-    </div>
-  </footer>
-
-  <script src="../assets/js/data.js"></script>
-  <script src="../assets/js/app.js"></script>
+  <h2>O Mu Bu Mu?</h2>
+  <p>Turnuva formatları • Tam ekran • OBS uyumlu • Reklamsız</p>
+  <p><a href="./omubumu/index.html" style="color:#8aa4ff">O Mu Bu Mu sayfasına git →</a></p>
 </body>
 </html>
