--- a/originals/omubumu/index.html
+++ b/originals/omubumu/index.html
@@ -3,42 +3,198 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>O Mu Bu Mu? • AltDünya Originals</title>
+  <title>O Mu Bu Mu? – AltDünya Originals</title>
   <style>
-    body{margin:0;font-family:system-ui;background:#070812;color:#e9ecff}
-    header{padding:24px 18px;border-bottom:1px solid rgba(255,255,255,.08)}
-    h1{margin:0 0 6px 0;font-size:22px}
-    p{margin:0;opacity:.8}
-    .wrap{padding:18px;max-width:1100px;margin:0 auto}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:12px}
-    .card{display:block;text-decoration:none;color:inherit;background:rgba(255,255,255,.04);
-      border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:14px;}
-    .badge{display:inline-block;font-size:12px;opacity:.85;padding:4px 8px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.03)}
-    .title{margin:10px 0 6px;font-size:16px}
-    .desc{margin:0 0 10px;opacity:.8;font-size:13px;line-height:1.35}
-    .meta span{padding:3px 8px;border-radius:999px;background:rgba(255,255,255,.03);
-      border:1px solid rgba(255,255,255,.10);margin-right:6px;font-size:12px}
-  </style>
+:root{
+  --bg0:#060714;
+  --bg1:#0a0c1e;
+  --card: rgba(255,255,255,.04);
+  --card2: rgba(255,255,255,.06);
+  --stroke: rgba(255,255,255,.10);
+  --stroke2: rgba(255,255,255,.16);
+  --text:#eaf0ff;
+  --muted: rgba(234,240,255,.75);
+  --muted2: rgba(234,240,255,.55);
+  --glow: rgba(120,90,255,.35);
+  --glow2: rgba(30,200,255,.22);
+  --radius: 18px;
+}
+*{box-sizing:border-box}
+html,body{height:100%}
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
+  color:var(--text);
+  background:
+    radial-gradient(1200px 600px at 35% 20%, rgba(140,90,255,.25), transparent 60%),
+    radial-gradient(900px 500px at 70% 35%, rgba(60,220,255,.15), transparent 55%),
+    linear-gradient(180deg, var(--bg1), var(--bg0));
+}
+a{color:inherit}
+.container{max-width:1180px;margin:0 auto;padding:18px}
+/* Top Nav */
+.topbar{
+  position:sticky; top:0; z-index:30;
+  backdrop-filter: blur(14px);
+  background: rgba(6,7,20,.55);
+  border-bottom:1px solid rgba(255,255,255,.07);
+}
+.navrow{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
+.brand{
+  display:flex;align-items:center;gap:10px;text-decoration:none;
+  padding:10px 12px;border-radius:999px;
+}
+.brand-badge{
+  width:32px;height:32px;border-radius:12px;
+  background: radial-gradient(circle at 35% 35%, rgba(255,255,255,.35), rgba(255,255,255,.06) 55%, rgba(0,0,0,.25));
+  border:1px solid rgba(255,255,255,.16);
+  box-shadow: 0 0 0 1px rgba(120,90,255,.18), 0 10px 30px rgba(0,0,0,.35);
+}
+.brand-title{line-height:1}
+.brand-title b{display:block;font-size:14px;letter-spacing:.5px}
+.brand-title span{display:block;font-size:12px;color:var(--muted2)}
+.nav{margin-left:auto;display:flex;gap:10px;flex-wrap:wrap}
+.nav a{
+  text-decoration:none;
+  padding:10px 14px;border-radius:999px;
+  border:1px solid rgba(255,255,255,.10);
+  background: rgba(255,255,255,.03);
+}
+.nav a.active{
+  border-color: rgba(170,140,255,.35);
+  box-shadow: 0 0 0 2px rgba(120,90,255,.10), 0 10px 35px rgba(120,90,255,.10);
+}
+/* Hero */
+.hero{
+  margin-top:14px;
+  border-radius: 22px;
+  background:
+    radial-gradient(900px 320px at 20% 20%, rgba(120,90,255,.30), transparent 55%),
+    radial-gradient(800px 300px at 70% 50%, rgba(60,220,255,.18), transparent 58%),
+    rgba(255,255,255,.03);
+  border:1px solid rgba(255,255,255,.08);
+  box-shadow: 0 20px 55px rgba(0,0,0,.40);
+  padding:22px;
+}
+.hero h1{margin:0 0 6px;font-size:34px;letter-spacing:.2px}
+.hero p{margin:0;color:var(--muted);max-width:820px;line-height:1.4}
+.pills{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
+.pill{
+  display:inline-flex;align-items:center;gap:8px;
+  padding:10px 12px;border-radius:999px;
+  border:1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.18);
+  color:var(--muted);
+  text-decoration:none;
+}
+.pill strong{color:var(--text);font-weight:650}
+/* Sections & cards */
+.section-title{margin:26px 0 12px;font-size:14px;letter-spacing:.12em;color:var(--muted);text-transform:uppercase}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
+@media (max-width:980px){.grid{grid-template-columns:1fr} .nav{margin-left:0}}
+.card{
+  border-radius: var(--radius);
+  border:1px solid rgba(255,255,255,.09);
+  background: rgba(255,255,255,.03);
+  padding:16px;
+  text-decoration:none;
+  box-shadow: 0 14px 40px rgba(0,0,0,.35);
+}
+.card:hover{border-color: rgba(255,255,255,.16); transform: translateY(-1px); transition: .15s ease}
+.card h3{margin:0 0 6px;font-size:20px}
+.card p{margin:0;color:var(--muted);line-height:1.35}
+.card .cta{
+  margin-top:12px;display:inline-flex;align-items:center;gap:8px;
+  padding:10px 12px;border-radius:999px;
+  border:1px solid rgba(170,140,255,.30);
+  background: rgba(120,90,255,.14);
+}
+.tags{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+.tag{
+  font-size:12px;color:var(--muted);
+  padding:6px 10px;border-radius:999px;
+  background: rgba(255,255,255,.03);
+  border:1px solid rgba(255,255,255,.08);
+}
+/* Footer */
+.footer{
+  margin-top:28px;padding:18px 0 26px;color:var(--muted2);
+  border-top:1px solid rgba(255,255,255,.06);
+  display:flex;gap:12px;flex-wrap:wrap;justify-content:space-between;align-items:center
+}
+.footer a{color:var(--muted);text-decoration:none}
+</style>
 </head>
 <body>
-  <header class="wrap">
-    <div class="badge">ALT DÜNYA ORIGINALS</div>
-    <h1>O Mu Bu Mu?</h1>
-    <p>Turnuva formatları • Tam ekran • OBS uyumlu • Reklamsız</p>
-  </header>
-
-  <main class="wrap">
-    <div class="grid">
-      <a class="card" href="./turnuvalar/ornek-turnuva.html" target="_blank">
-        <div class="badge">O MU BU MU</div>
-        <div class="title">Örnek Turnuva (64)</div>
-        <p class="desc">Bu sayfa, gerçek turnuvalarınızı bağlamanız için örnek dosyadır.</p>
-        <div class="meta">
-          <span>#64</span><span>#turnuva</span><span>#obs</span>
-        </div>
-      </a>
+  <div class="topbar">
+    <div class="container">
+      <div class="navrow">
+        <a class="brand" href="/index.html">
+          <div class="brand-badge" aria-hidden="true"></div>
+          <div class="brand-title">
+            <b>ALTDÜNYA – RETRO HUB</b>
+            <span>Neon Retro Uzay • Arşiv • Kurulum Rehberleri</span>
+          </div>
+        </a>
+        <nav class="nav" aria-label="Üst menü">
+          <a class="" href="/index.html">Ana Sayfa</a>
+          <a class="" href="/free/index.html">Freeware / Abandonware</a>
+          <a class="" href="/openbor/index.html">OpenBOR</a>
+          <a class="active" href="/originals/index.html">Originals</a>
+          <a class="" href="https://www.youtube.com/@altdunya">YouTube</a>
+        </nav>
+      </div>
     </div>
-  </main>
+  </div>
+
+  <div class="container">
+    <div style="margin:14px 0 10px;color:var(--muted2);font-size:13px"><a href="/index.html" style="color:var(--muted)">Anasayfa</a> › <a href="/originals/index.html" style="color:var(--muted)">Originals</a> › O Mu Bu Mu?</div>
+
+    <section class="hero">
+      <h1>O Mu Bu Mu?</h1>
+      <p>Turnuvalar hub sayfası. Kartı tıkla → yeni sekmede aç → F11 ile tam ekran (OBS için ideal).</p>
+      <div class="pills">
+        <a class="pill" href="/index.html"><strong>🏠</strong> Anasayfa</a>
+        <a class="pill" href="/originals/index.html"><strong>✨</strong> Originals</a>
+      </div>
+    </section>
+
+    
+    <div class="section-title">Turnuvalar</div>
+    <div class="grid">
+      <a class="card" href="/originals/omubumu/turnuvalar/ornek-turnuva.html" target="_blank" rel="noopener">
+        <h3>Örnek Turnuva (Demo)</h3>
+        <p>Gerçek turnuva HTML dosyalarını buraya koyacağız. Şimdilik demo sayfa.</p>
+        <div class="tags">
+          <span class="tag">demo</span><span class="tag">obs</span><span class="tag">fullscreen</span>
+        </div>
+        <div class="cta">Aç →</div>
+      </a>
+
+      <div class="card" style="opacity:.75">
+        <h3>En İyi Yerli Dizi</h3>
+        <p>Bağlanacak (64/128). Dosya hazırsa buraya linkleyeceğiz.</p>
+        <div class="tags"><span class="tag">dizi</span><span class="tag">turnuva</span></div>
+        <div class="cta">Yakında</div>
+      </div>
+
+      <div class="card" style="opacity:.75">
+        <h3>En Efsane Beşiktaş Futbolcusu</h3>
+        <p>Bağlanacak (64/128). Taraftar bölümü.</p>
+        <div class="tags"><span class="tag">spor</span><span class="tag">beşiktaş</span></div>
+        <div class="cta">Yakında</div>
+      </div>
+    </div>
+
+
+    <footer class="footer">
+      <div>
+        <a href="/legal/telif-politikasi.html">Telif Politikası</a> •
+        <a href="/legal/iletisim.html">İletişim</a> •
+        <a href="https://www.youtube.com/@altdunya">YouTube</a>
+      </div>
+      <div>© AltDünya • Retro Hub</div>
+    </footer>
+  </div>
 </body>
 </html>
