--- a/originals/omubumu/turnuvalar/ornek-turnuva.html
+++ b/originals/omubumu/turnuvalar/ornek-turnuva.html
@@ -1,11 +1,21 @@
 <!doctype html>
 <html lang="tr">
 <head>
-<meta charset="utf-8">
-<title>Örnek Turnuva</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>O Mu Bu Mu? • Demo Turnuva</title>
+  <style>
+    html,body{height:100%;margin:0}
+    body{background:#000;display:flex;align-items:center;justify-content:center;color:#fff;font-family:system-ui}
+    .box{max-width:860px;padding:28px;border:1px solid rgba(255,255,255,.2);border-radius:18px;background:rgba(255,255,255,.04)}
+    h1{margin:0 0 10px}
+    p{margin:0;opacity:.85;line-height:1.4}
+  </style>
 </head>
-<body style="background:black;color:white;font-family:system-ui;text-align:center;padding-top:100px">
-<h1>Örnek Turnuva Sayfası</h1>
-<p>Buraya gerçek O Mu Bu Mu turnuva HTML dosyanızı koyacaksınız.</p>
+<body>
+  <div class="box">
+    <h1>Demo Turnuva</h1>
+    <p>Bu sayfa sadece yer tutucu. Gerçek O Mu Bu Mu turnuva HTML dosyanızı buraya koyacağız.</p>
+  </div>
 </body>
 </html>
