--- a/originals/omubumu/turnuvalar/ornek-turnuva.html
+++ b/originals/omubumu/turnuvalar/ornek-turnuva.html
@@ -6,16 +6,33 @@
   <title>O Mu Bu Mu? • Demo Turnuva</title>
   <style>
     html,body{height:100%;margin:0}
-    body{background:#000;display:flex;align-items:center;justify-content:center;color:#fff;font-family:system-ui}
-    .box{max-width:860px;padding:28px;border:1px solid rgba(255,255,255,.2);border-radius:18px;background:rgba(255,255,255,.04)}
+    body{
+      background: radial-gradient(1200px 600px at 50% 0%, rgba(138,92,255,.20), transparent 60%),
+                  radial-gradient(900px 500px at 10% 20%, rgba(38,230,255,.18), transparent 55%),
+                  radial-gradient(900px 500px at 90% 25%, rgba(255,79,216,.14), transparent 55%),
+                  linear-gradient(180deg, #050713, #070a1a 65%, #04050d);
+      color:#e9efff;
+      font-family:system-ui;
+      display:flex;align-items:center;justify-content:center;
+      padding:24px;
+    }
+    .card{
+      max-width:900px;
+      border-radius:18px;
+      border:1px solid rgba(255,255,255,.10);
+      background: rgba(11,16,38,.55);
+      box-shadow: 0 10px 40px rgba(0,0,0,.35);
+      padding:22px;
+    }
     h1{margin:0 0 10px}
-    p{margin:0;opacity:.85;line-height:1.4}
+    p{margin:0;opacity:.85;line-height:1.45}
   </style>
 </head>
 <body>
-  <div class="box">
+  <div class="card">
     <h1>Demo Turnuva</h1>
-    <p>Bu sayfa sadece yer tutucu. Gerçek O Mu Bu Mu turnuva HTML dosyanızı buraya koyacağız.</p>
+    <p>Bu sayfa sadece yer tutucu. Buraya gerçek “O Mu Bu Mu?” turnuva HTML dosyanızı koyacağız.</p>
+    <p style="margin-top:10px;opacity:.75">İpucu: Yayında bu sayfayı açıp <strong>F11</strong> ile tam ekran yapabilirsiniz.</p>
   </div>
 </body>
 </html>
