--- a/originals/omubumu/index.html
+++ b/originals/omubumu/index.html
@@ -7,103 +7,68 @@
   <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
-  <div class="stars"></div>
+<div class="stars"></div>
 
-  <header>
-    <div class="topbar">
-      <a class="brand" href="../../index.html" aria-label="AltDünya ana sayfa">
-        <div class="ufo" aria-hidden="true"></div>
-        <div>
-          <h1>ALTDÜNYA – Retro Hub</h1>
-          <small>Neon Retro Uzay • Arşiv • Kurulum Rehberleri</small>
-        </div>
-      </a>
-      <nav aria-label="Site menüsü">
-        <a class="navlink" href="../../index.html">Ana Sayfa</a>
-        <a class="navlink" href="../../free/index.html">Freeware / Abandonware</a>
-        <a class="navlink" href="../../openbor/index.html">OpenBOR</a>
-        <a class="navlink" href="../../originals/index.html">Originals</a>
-        <a class="navlink" href="https://www.youtube.com/@altdunya" target="_blank" rel="noopener">YouTube</a>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div class="topbar">
+    <a class="brand" href="../../index.html">
+      <div class="ufo"></div>
+      <div>
+        <h1>ALTDÜNYA – Retro Hub</h1>
+        <small>Neon Retro Uzay • Arşiv • Kurulum Rehberleri</small>
+      </div>
+    </a>
+    <nav>
+      <a class="navlink" href="../../index.html">Ana Sayfa</a>
+      <a class="navlink" href="../../free/index.html">Freeware / Abandonware</a>
+      <a class="navlink" href="../../openbor/index.html">OpenBOR</a>
+      <a class="navlink" href="../../originals/index.html">Originals</a>
+      <a class="navlink" href="https://www.youtube.com/@altdunya" target="_blank">YouTube</a>
+    </nav>
+  </div>
+</header>
 
-  <main class="wrap">
+<main class="wrap">
 
 <section class="section">
   <div class="breadcrumb">
-    <a href="../../index.html">Anasayfa</a> <span>›</span>
-    <a href="../index.html">Originals</a> <span>›</span>
+    <a href="../../index.html">Anasayfa</a> ›
+    <a href="../index.html">Originals</a> ›
     <span>O Mu Bu Mu?</span>
   </div>
 
   <div class="contentCard">
     <h2 class="h1">O Mu Bu Mu?</h2>
-    <p class="lead">Turnuva formatları. Kartı tıkla → yeni sekmede aç → <strong>F11</strong> tam ekran.</p>
-
-    <div class="metaRow">
-      <span class="chip">32/64/128</span>
-      <span class="chip">Random eşleşme</span>
-      <span class="chip">Yayın uyumlu</span>
-    </div>
-
-    <a class="backLink" href="../index.html">← Originals’a dön</a>
+    <p class="lead">Turnuva hub sayfası. Kartı tıkla → yeni sekmede aç → F11 ile tam ekran.</p>
   </div>
 </section>
 
-<section class="section" aria-label="Turnuvalar">
+<section class="section">
   <h2>Turnuvalar</h2>
   <div class="grid3">
-    <a class="card" href="./turnuvalar/ornek-turnuva.html" target="_blank" rel="noopener">
+    <a class="card" href="./turnuvalar/turk-rock-32/" target="_blank">
       <p class="kicker">O Mu Bu Mu?</p>
-      <h3>Örnek Turnuva (Demo)</h3>
-      <p>Şimdilik yer tutucu. Gerçek turnuva HTML dosyalarını bu klasöre koyacağız.</p>
+      <h3>Türk Rock (32)</h3>
+      <p>32 seçenekli Türk Rock turnuvası.</p>
       <div class="ctaRow">
         <span class="btn primary">Aç →</span>
-        <span class="tag">demo</span>
-        <span class="tag">fullscreen</span>
-      </div>
-    </a>
-
-    <a class="card" href="#" onclick="alert('Bu kartı gerçek turnuva linkiyle değiştireceğiz.'); return false;">
-      <p class="kicker">Yakında</p>
-      <h3>En İyi Yerli Dizi</h3>
-      <p>Hazır olduğunda buraya eklenecek.</p>
-      <div class="ctaRow">
-        <span class="btn pink">Yakında</span>
-        <span class="tag">64/128</span>
-        <span class="tag">dizi</span>
-      </div>
-    </a>
-
-    <a class="card" href="#" onclick="alert('Bu kartı gerçek turnuva linkiyle değiştireceğiz.'); return false;">
-      <p class="kicker">Yakında</p>
-      <h3>En Efsane Beşiktaş Futbolcusu</h3>
-      <p>Hazır olduğunda buraya eklenecek.</p>
-      <div class="ctaRow">
-        <span class="btn pink">Yakında</span>
-        <span class="tag">64/128</span>
-        <span class="tag">spor</span>
+        <span class="tag">32</span>
+        <span class="tag">müzik</span>
       </div>
     </a>
   </div>
 </section>
 
-  </main>
+</main>
 
-  <footer>
-    <div class="foot">
-      <div style="display:flex; gap:10px; flex-wrap:wrap;">
-        <a href="../../legal.html">Telif Politikası</a>
-        <a href="../../contact.html">İletişim</a>
-        <a href="https://www.youtube.com/@altdunya" target="_blank" rel="noopener">YouTube</a>
-        <a href="../../originals/index.html">Originals</a>
-      </div>
-      <small>© AltDünya • Retro Hub</small>
-    </div>
-  </footer>
+<footer>
+  <div class="foot">
+    <a href="../../legal.html">Telif Politikası</a>
+    <a href="../../contact.html">İletişim</a>
+  </div>
+</footer>
 
-  <script src="../../assets/js/data.js"></script>
-  <script src="../../assets/js/app.js"></script>
+<script src="../../assets/js/data.js"></script>
+<script src="../../assets/js/app.js"></script>
 </body>
 </html>
